fixed href link errors

--- a/bondoc-do-automotivePartsEcommerceSite/contact-us.html
+++ b/bondoc-do-automotivePartsEcommerceSite/contact-us.html
@@ -52,7 +52,7 @@
     </svg>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+        <a class="navbar-brand" href="/index.html"
           ><img
             src="images/logo.png"
             style="max-width: 15%; max-height: auto"
@@ -72,12 +72,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html"
+                href="parts-page.html"
                 >Available Parts</a
               >
             </li>
@@ -87,7 +87,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html" >Sign Up / Login</a>
+              <a class="nav-link" href="login-signup.html" >Sign Up / Login</a>
             </li>
           </ul>
         </div>
@@ -119,18 +119,18 @@
 
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item">
-            <a href="/bondoc-do-automotivePartsEcommerceSite/" class="nav-link px-2 text-muted">Home</a>
+            <a href="index.html" class="nav-link px-2 text-muted">Home</a>
           </li>
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html"
+              href="parts-page.html"
               class="nav-link px-2 text-muted"
               >Available Parts</a
             >
           </li>
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html"
+              href="contact-us.html"
               class="nav-link px-2 text-muted"
               >Contact Us</a
             >
