--- a/bondoc-do-automotivePartsEcommerceSite/index.html
+++ b/bondoc-do-automotivePartsEcommerceSite/index.html
@@ -52,13 +52,13 @@
             <a class="nav-link active" aria-current="page" href="#" >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html" >Available Parts</a>
+            <a class="nav-link" href="parts-page.html" >Available Parts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html" >Contact Us</a>
+            <a class="nav-link" href="contact-us.html" >Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html" >Sign Up / Login</a>
+            <a class="nav-link" href="login-signup.html" >Sign Up / Login</a>
           </li>
         </ul>
       </div>
@@ -73,7 +73,7 @@
     <h1 style="margin-left: 5rem;"> If you've an idea we'll make it real. </h1>
     
     </div>
-    <img src="/bondoc-do-automotivePartsEcommerceSite/images/hr-fake.png" style="width: 80%;display: block;margin-left: auto;margin-right: auto; padding-bottom: 2rem;" alt="">
+    <img src="images/hr-fake.png" style="width: 80%;display: block;margin-left: auto;margin-right: auto; padding-bottom: 2rem;" alt="">
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -83,13 +83,13 @@
   
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="/bondoc-do-automotivePartsEcommerceSite/images/home-carousel-image-1.png" class="d-block w-100" alt="img1">
+        <img src="images/home-carousel-image-1.png" class="d-block w-100" alt="img1">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="/bondoc-do-automotivePartsEcommerceSite/images/home-carousel-image-2.png" class="d-block w-100" alt="img2">
+        <img src="images/home-carousel-image-2.png" class="d-block w-100" alt="img2">
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="/bondoc-do-automotivePartsEcommerceSite/images/home-carousel-image-3.png" class="d-block w-100" alt="img3">
+        <img src="images/home-carousel-image-3.png" class="d-block w-100" alt="img3">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -116,8 +116,8 @@
 
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html" class="nav-link px-2 text-muted">Available Parts</a></li>
-      <li class="nav-item"><a href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html" class="nav-link px-2 text-muted">Contact Us</a></li>
+      <li class="nav-item"><a href="parts-page.html" class="nav-link px-2 text-muted">Available Parts</a></li>
+      <li class="nav-item"><a href="contact-us.html" class="nav-link px-2 text-muted">Contact Us</a></li>
   
     </ul>
   </footer>
