--- a/bondoc-do-automotivePartsEcommerceSite/login-signup.html
+++ b/bondoc-do-automotivePartsEcommerceSite/login-signup.html
@@ -53,9 +53,7 @@
     </svg>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
       <div class="container">
-        <a
-          class="navbar-brand"
-          href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+        <a class="navbar-brand" href="index.html"
           ><img
             src="images/logo.png"
             style="max-width: 15%; max-height: auto"
@@ -75,26 +73,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/index.html"
-                >Home</a
-              >
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html"
+              <a class="nav-link" aria-current="page" href="parts-page.html"
                 >Available Parts</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html"
-                >Contact Us</a
-              >
+              <a class="nav-link" href="contact-us.html">Contact Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Sign Up / Login</a>
@@ -325,23 +312,15 @@
 
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item">
-            <a
-              href="/bondoc-do-automotivePartsEcommerceSite/index.html"
-              class="nav-link px-2 text-muted"
-              >Home</a
-            >
+            <a href="index.html" class="nav-link px-2 text-muted">Home</a>
           </li>
           <li class="nav-item">
-            <a
-              href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html"
-              class="nav-link px-2 text-muted"
+            <a href="parts-page.html" class="nav-link px-2 text-muted"
               >Available Parts</a
             >
           </li>
           <li class="nav-item">
-            <a
-              href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html"
-              class="nav-link px-2 text-muted"
+            <a href="contact-us.html" class="nav-link px-2 text-muted"
               >Contact Us</a
             >
           </li>
