--- a/bondoc-do-automotivePartsEcommerceSite/parts-page.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page.html
@@ -55,7 +55,7 @@
       <div class="container">
         <a
           class="navbar-brand"
-          href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+          href="index.html"
           ><img
             src="images/logo.png"
             style="max-width: 15%; max-height: auto"
@@ -77,7 +77,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+                href="index.html"
                 >Home</a
               >
             </li>
@@ -89,14 +89,14 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html"
+                href="contact-us.html"
                 >Contact Us</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html"
+                href="login-signup.html"
                 >Sign Up / Login</a
               >
             </li>
@@ -108,20 +108,20 @@
       <div class="row row-cols-1 row-cols-md-3 g-4" style="padding-bottom: 10rem;">
       <div class="col">
         <div class="card">
-          <img src="/bondoc-do-automotivePartsEcommerceSite/images/cr152-image.png" class="card-img-top" alt="Keeway Cafe Racer 152 Parts" />
+          <img src="images/cr152-image.png" class="card-img-top" alt="Keeway Cafe Racer 152 Parts" />
           <div class="card-body">
             <h5 class="card-title">Beneli Cafe Racer 152 Parts</h5>
             <p class="card-text">
               Discover pre designed parts for this motorcycle, with downloadable 3d models available. 
             </p>
             <p style="color:red"> Modifications to intake airbox is needed for parts installation for this motorcycle</p>
-            <a href="/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html" class="btn btn-primary">See Parts</a>
+            <a href="parts-page-cafe.html" class="btn btn-primary">See Parts</a>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
-          <img src="/bondoc-do-automotivePartsEcommerceSite/images/tvs-a180.png" class="card-img-top" alt="TVS Apache 180 Parts" />
+          <img src="images/tvs-a180.png" class="card-img-top" alt="TVS Apache 180 Parts" />
           <div class="card-body">
             <h5 class="card-title">TVS Apache RTR 180 Parts</h5>
             <p class="card-text">
@@ -151,21 +151,21 @@
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+              href="index.html"
               class="nav-link px-2 text-muted"
               >Home</a
             >
           </li>
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html"
+              href="parts-page.html"
               class="nav-link px-2 text-muted"
               >Available Parts</a
             >
           </li>
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html"
+              href="contact-us.html"
               class="nav-link px-2 text-muted"
               >Contact Us</a
             >
