--- a/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html
@@ -55,7 +55,7 @@
       <div class="container">
         <a
           class="navbar-brand"
-          href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+          href="index.html"
           ><img
             src="images/logo.png"
             style="max-width: 15%; max-height: auto"
@@ -77,7 +77,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+                href="index.html"
                 >Home</a
               >
             </li>
@@ -89,14 +89,14 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html"
+                href="contact-us.html"
                 >Contact Us</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/bondoc-do-automotivePartsEcommerceSite/login-signup.html"
+                href="login-signup.html"
                 >Sign Up / Login</a
               >
             </li>
@@ -107,7 +107,7 @@
     <div class="container" style="padding-top: 2rem; padding-bottom: 40rem">
       <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html">Available Products</a></li>
+          <li class="breadcrumb-item"><a href="parts-page.html">Available Products</a></li>
           <li class="breadcrumb-item active" aria-current="page">Cafe Racer 152</li>
         </ol>
       </nav>
@@ -129,21 +129,21 @@
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/index.html"
+              href="index.html"
               class="nav-link px-2 text-muted"
               >Home</a
             >
           </li>
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/parts-page.html"
+              href="parts-page.html"
               class="nav-link px-2 text-muted"
               >Available Parts</a
             >
           </li>
           <li class="nav-item">
             <a
-              href="/bondoc-do-automotivePartsEcommerceSite/contact-us.html"
+              href="contact-us.html"
               class="nav-link px-2 text-muted"
               >Contact Us</a
             >
