--- a/bondoc-do-automotivePartsEcommerceSite/login-signup.html
+++ b/bondoc-do-automotivePartsEcommerceSite/login-signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DB MFG | Autoparts & Fabrication | Home</title>
+    <title>DB MFG | Autoparts & Fabrication | Login & Signup</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
