--- a/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page-cafe.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DB MFG | Autoparts & Fabrication | Home</title>
+    <title>DB MFG | Autoparts & Fabrication | Cafe Racer 152 Parts</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,6 +25,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
@@ -104,6 +105,7 @@
         </div>
       </div>
     </nav>
+    <!--Body Code-->
     <div class="container" style="padding-top: 2rem; padding-bottom: 40rem">
       <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -111,7 +113,45 @@
           <li class="breadcrumb-item active" aria-current="page">Cafe Racer 152</li>
         </ol>
       </nav>
-    <div class="container">
+      <h1>Beneli / Keeway Cafe Racer 152 </h1>
+    <div class="container-sm" style="border-radius: 5rem;">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+      
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="images/crp1.png" class="d-block w-100" alt="img1">
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="images/crp2.png" class="d-block w-100" alt="img2">
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="images/crp3.png" class="d-block w-100" alt="img3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <img src="images/hr-fake.png" style="width: 80%;display: block;margin-left: auto;margin-right: auto; padding-bottom: 2rem;" alt="">
+      <h3>About Modifications</h3>
+      <h5 style="padding-bottom: 3rem;padding-left: 2rem;">  Increase Excitement by installing our intake airbox modifications on your bike. <br>  Our product increases the airflow going to the engine and thus more power and a more exciting ride</h5>
+      <h2 style="padding-bottom: 1rem;">File Download Link</h2>
+      <h6 style="padding-bottom:3rem;padding-left: 2rem;">  The modifications included in the downloadable files includes 3d files.<br>  For instructions please refer to the contact page for inquiry.<br>  Installations must be done by professionals.</h6>
+      <a href="/downloadfiles/CR152_PartsE.rar"><button class="btn" style="background-color:#0d6efd;border: none;color: white;padding: 12px 30px;cursor: pointer;width:100%;font-size: 20px;"><i class="fa fa-download"></i> Download</button></a>
+    </div>
+    <img src="images/hr-fake.png" style="width: 80%;display: block;margin-left: auto;margin-right: auto; padding-bottom: 2rem;padding-top: 5rem;opacity: 0;" alt="">
+    <!--Footer Code-->
+    <div class="container" >
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
       >
