--- a/bondoc-do-automotivePartsEcommerceSite/parts-page.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DB MFG | Autoparts & Fabrication | Home</title>
+    <title>DB MFG | Autoparts & Fabrication | Available Parts</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -128,7 +128,7 @@
               Discover pre designed parts for this motorcycle, with downloadable 3d models available. 
             </p>
             <p style="color:rgb(11, 94, 215)"> Parts for this motorcycle are plug and play</p> <br>
-            <a href="#" class="btn btn-primary">See Parts</a>
+            <a href="parts-page-apache.html" class="btn btn-primary">See Parts</a>
           </div>
         </div>
       </div>
