--- a/frontend backup/login-signup.html
+++ b/frontend backup/login-signup.html
@@ -1,41 +1,3 @@
-<?php 
-
-include 'config.php';
-error_reporting(0);
-
-if (isset($_POST['submit']))
-{
- $name1 = $_POST[name1];
- $username = $_POST[username];
- $email = $_POST[email];
- $password1 = $_POST[password1];
- $cpassword = md5($_POST[cpassword]);
-
- if(password1==cpassword){
-  $sql = "SELECT * FROM signup_php WHERE email = 'email'";
-  $result = mysqli_query($conn, $sql);
-
-  if(!$result -> num_rows > 0) {
-    $sql = "INSERT INTO signup_php (name, username, email, password, cpassword) VALUES('$name1', '$username', '$email', '$password1', '$cpassword')";
-    $result = mysqli_query($conn, $sql);
-      if($result){
-        $name = "";
-        $username = "";
-        $email = "";
-        $_POST['password'] = "";
-        $_POST['cpassword'] = "";
-        header("location: /login-signup-ex.php");
-      } else {
-          echo"<script>alert('Try again')</script>";
-      }
-  }else {
-      echo"<script>alert('Email already is already existing')</script>";
-  }
-}else{
-  echo"<script>alert('Password do not match')</script>";
-}
-}
-?>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -271,19 +233,40 @@ if (isset($_POST['submit']))
 
             <!-- Name input -->
             <div class="form-outline mb-4">
-              <input type="text" name="name1" id="registerName" class="form-control" value="<?php echo $name1?>" required/>
+              <input
+                type="text"
+                name="name1"
+                id="registerName"
+                class="form-control"
+                value=""
+                required
+              />
               <label class="form-label" for="registerName">Name</label>
             </div>
 
             <!-- Username input -->
             <div class="form-outline mb-4">
-              <input type="text" name="username" id="registerUsername" class="form-control" value="<?php echo $username?>"  required/>
+              <input
+                type="text"
+                name="username"
+                id="registerUsername"
+                class="form-control"
+                value=""
+                required
+              />
               <label class="form-label" for="registerUsername">Username</label>
             </div>
 
             <!-- Email input -->
             <div class="form-outline mb-4">
-              <input type="email" name="email" id="registerEmail" class="form-control" value="<?php echo $email;?>" required/>
+              <input
+                type="email"
+                name="email"
+                id="registerEmail"
+                class="form-control"
+                value=""
+                required
+              />
               <label class="form-label" for="registerEmail">Email</label>
             </div>
 
@@ -294,9 +277,8 @@ if (isset($_POST['submit']))
                 name="password1"
                 id="registerPassword"
                 class="form-control"
-                value="<?php echo $password1;?>"
+                value=""
                 required
-
               />
               <label class="form-label" for="registerPassword">Password</label>
             </div>
@@ -308,7 +290,7 @@ if (isset($_POST['submit']))
                 name="cpassword"
                 id="registerRepeatPassword"
                 class="form-control"
-                value="<?php echo $cpassword;?>"
+                value=""
                 required
               />
               <label class="form-label" for="registerRepeatPassword"
@@ -333,7 +315,11 @@ if (isset($_POST['submit']))
             </div>
 
             <!-- Submit button -->
-            <button type="submit" name="submit" class="btn btn-primary btn-block mb-3">
+            <button
+              type="submit"
+              name="submit"
+              class="btn btn-primary btn-block mb-3"
+            >
               Register
             </button>
           </form>
