--- a/frontend backup/index.html
+++ b/frontend backup/index.html
@@ -58,7 +58,7 @@
             <a class="nav-link" href="contact-us.html" >Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login-signup.php" >Sign Up / Login</a>
+            <a class="nav-link" href="login-signup.html" >Sign Up / Login</a>
           </li>
         </ul>
       </div>
