--- a/FinalOutput/ComputerWebsite/index.html
+++ b/FinalOutput/ComputerWebsite/index.html
@@ -21,7 +21,7 @@
                 <ul id="Menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="About.html">About</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="account.html">Account</a></li>
                 </ul>
