--- a/FinalOutput/ComputerWebsite/account.html
+++ b/FinalOutput/ComputerWebsite/account.html
@@ -19,11 +19,11 @@
             </div>
             <nav>
                 <ul id="Menu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="About.html">About</a></li>
                     <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
             <img src="ComputerParts/basket-cart.png" width="30px" height="30px">
