--- a/policarpio-ag-blog/index.html
+++ b/policarpio-ag-blog/index.html
@@ -294,6 +294,123 @@
 
 <!-- popular -->
 
+<!-- hoops -->
+
+<section class="hoops" id="hoops">
+    
+    <h1 class="heading"><span>Jumpman</span> hoops </h1>
+
+    <div class="row">
+        <div class="image-container">
+            <div class="small-image">
+                <img src="images/f-img-1.1.png" class="hoops-image-1" alt="">
+                <img src="images/f-img-1.2.png" class="hoops-image-1" alt="">
+                <img src="images/f-img-1.3.png" class="hoops-image-1" alt="">
+                <img src="images/f-img-1.4.png" class="hoops-image-1" alt="">
+            </div>
+            <div class="big-image">
+                <img src="images/f-img-1.1.png" class="big-image-1" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <h3>Air Jordan 36 “First Light”</h3>
+        <p>The Air Jordan 36 First Light boasts a heavy-duty jacquard Leno-Weave upper reinforced with a TPU ribbon that surrounds the collar.</p>
+    </div>
+
+    <div class="row">
+        <div class="image-container">
+            <div class="small-image">
+                <img src="images/f-img-2.1.png" class="hoops-image-2" alt="">
+                <img src="images/f-img-2.2.png" class="hoops-image-2" alt="">
+                <img src="images/f-img-2.3.png" class="hoops-image-2" alt="">
+                <img src="images/f-img-2.4.png" class="hoops-image-2" alt="">
+            </div>
+            <div class="big-image">
+                <img src="images/f-img-2.1.png" class="big-image-2" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <h3>Jordan Luka 1 “Neo Turquoise”</h3>
+        <p>The Jordan Luka 1 is arriving in a white and metallic silver base and neo turquose and bright crimson in details. The color scheme is a nod to his uniform with Real Madrid.</p>
+    </div>
+
+    <div class="row">
+        <div class="image-container">
+            <div class="small-image">
+                <img src="images/f-img-3.1.png" class="hoops-image-3" alt="">
+                <img src="images/f-img-3.2.png" class="hoops-image-3" alt="">
+                <img src="images/f-img-3.3.png" class="hoops-image-3" alt="">
+                <img src="images/f-img-3.4.png" class="hoops-image-3" alt="">
+            </div>
+            <div class="big-image">
+                <img src="images/f-img-3.1.png" class="big-image-3" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <h3>Jordan Zion 2 “Hope Diamond”</h3>
+        <p>Inspired by the 21-year-old's goal of winning at the next level of his career, the upcoming colorway indulges in a “White,” “Half Blue,” “Deep Royal Blue” and “Pink Prime” mix of colors that make a statement on the court.</p>
+    </div>
+    
+    <div class="row">
+        <div class="image-container">
+            <div class="small-image">
+                <img src="images/f-img-4.1.png" class="hoops-image-4" alt="">
+                <img src="images/f-img-4.2.png" class="hoops-image-4" alt="">
+                <img src="images/f-img-4.3.png" class="hoops-image-4" alt="">
+                <img src="images/f-img-4.4.png" class="hoops-image-4" alt="">
+            </div>
+            <div class="big-image">
+                <img src="images/f-img-4.1.png" class="big-image-4" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <h3>Jordan Why Not Zero.5 “HTG Honor the Gift”</h3>
+        <p>Jordan Brand is fusing together both Russell Westbrook's street-fashion label Honor The Gift and his latest signature Jordan Why Not Zer0.5 shoe.</p>
+    </div>
+
+    <div class="row">
+        <div class="image-container">
+            <div class="small-image">
+                <img src="images/f-img-5.1.png" class="hoops-image-5" alt="">
+                <img src="images/f-img-5.2.png" class="hoops-image-5" alt="">
+                <img src="images/f-img-5.3.png" class="hoops-image-5" alt="">
+                <img src="images/f-img-5.4.png" class="hoops-image-5" alt="">
+            </div>
+            <div class="big-image">
+                <img src="images/f-img-5.1.png" class="big-image-5" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <h3>Jordan Zoom Separate</h3>
+        <p>Create separation and get buckets on the hardwood in the Jordan Zoom Separate. Inspired by Luka Doncic’s step-back-shot, these silhouettes feature a lightweight, low-top design that helps you create separation faster and take control of the court. </p>
+    </div> 
+
+    <div class="row">
+        <div class="image-container">
+            <div class="small-image">
+                <img src="images/f-img-6.1.png" class="hoops-image-6" alt="">
+                <img src="images/f-img-6.2.png" class="hoops-image-6" alt="">
+                <img src="images/f-img-6.3.png" class="hoops-image-6" alt="">
+                <img src="images/f-img-6.4.png" class="hoops-image-6" alt="">
+            </div>
+            <div class="big-image">
+                <img src="images/f-img-6.1.png" class="big-image-6" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <h3>Jordan One Take 3</h3>
+        <p>Lightweight, and hyper-responsive underfoot the Jordan One Take 3 up the ante. Feet get the most out of the Air Zoom Unit, thanks to its top-loaded design. </p>
+    </div> 
+</section>
+
+<!-- hoops -->
+
 
 <!-- custom js file link-->
 <script src="script.js"></script>
