split login sigup page for easier troubleshooting as well; mysql functional now

--- a/bondoc-do-automotivePartsEcommerceSite/contact-us.html
+++ b/bondoc-do-automotivePartsEcommerceSite/contact-us.html
@@ -87,7 +87,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login-signup.html" >Sign Up / Login</a>
+              <a class="nav-link" href="login.php" >Sign Up / Login</a>
             </li>
           </ul>
         </div>
