--- a/bondoc-do-automotivePartsEcommerceSite/parts-page.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page.html
@@ -96,7 +96,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="login-signup.html"
+                href="login.php"
                 >Sign Up / Login</a
               >
             </li>
