--- a/bondoc-do-automotivePartsEcommerceSite/parts-page-apache.html
+++ b/bondoc-do-automotivePartsEcommerceSite/parts-page-apache.html
@@ -97,7 +97,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="login-signup.html"
+                href="login.php"
                 >Sign Up / Login</a
               >
             </li>
