added and edited content

--- a/malonzo-lm-FoodBlog/food.html
+++ b/malonzo-lm-FoodBlog/food.html
@@ -26,28 +26,23 @@
         <!-- item -->
         <div class = "food-item">
             <div class = "food-text">
-                    <h2>Some of the BEST DISHES to eat in the Philippines</h2>
+                    <h3>Some of the BEST DISHES to try in the Philippines</h3>
                     <p>Filipino cuisine has recently been tagged as the ‘next big thing’ to look out for in the culinary world. With the country’s variety of influences throughout its rich history, its traditional cooking techniques, and the Filipinos’ knack for combining flavours and making the most of any and all ingredients at their disposal, what results is unpretentious, no-frills food that’s simply delicious.</p>
                     <div class = "food-content">
                         <!-- item -->
                         <div class="row">
                           <div class="column">
                             <div class="card">
-                              <img src="images/adobo.jpg" alt="" style="width:100%">
+                              <img src="images/adobo.jpg" alt="">
                               <div class="container">
                                 <h2>ADOBO</h2>
                                 <p>It’s the Filipino dish everybody knows — the mighty adobo. It is made by stewing meat (usually chicken, pork, or a combination of both) in soy sauce and vinegar, adding peppercorns and bay leaves for that special flavour. Bonus leftovers tip: pull the meat from the bone and fry ’til crispy for some tasty adobo flakes.</p>
                               </div>
                             </div>
-                          </div> 
-                        </div>
-                    </div>
-                    <div class = "food-content">
-                        <!-- item -->
-                        <div class="row">
+                          </div>
                           <div class="column">
                             <div class="card">
-                              <img src="images/kare-kare.jpg" alt="" style="width:100%">
+                              <img src="images/kare-kare.jpg" alt="">
                               <div class="container">
                                 <h2>KARE-KARE</h2>
                                 <p>This rich stew is made with peanut sauce and, customarily, oxtail, but other meatier cuts of beef can also be added in. Many Filipinos will consider kare-kare incomplete without a serving of bagoong (fermented seafood paste) on the side.</p>
@@ -55,26 +50,86 @@
                             </div>
                           </div> 
                         </div>
-                    </div>   
+                    </div>  
                     <div class = "food-content">
                         <!-- item -->
                         <div class="row">
                           <div class="column">
                             <div class="card">
-                              <img src="images/lechon.jpg" alt="" style="width:100%">
+                              <img src="images/lechon.jpg" alt="">
                               <div class="container">
                                 <h2>LECHON</h2>
                                 <p>One of the top contenders among the best Filipino dishes (alongside adobo) is perhaps the famous lechon. After all, it is hard to top a tasty, fully-roasted pig with perfectly crisp skin and juicy meat. Find the best of this sinful treat on the island of Cebu, but this is almost always served at any grand Pinoy gathering or fiesta.</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="column">
+                            <div class="card">
+                              <img src="images/sinigang.jpg" alt="">
+                              <div class="container">
+                                <h2>SINIGANG</h2>
+                                <p>Sinigang is a Pinoy classic. A delicious sour broth usually made tangy by tamarind (sometimes kamias), it’s filled with different vegetables and a meat of choice. Popular variants include sinigang na baboy (pork), sinigang na hipon (shrimp), and sinigang na isda (fish).</p>
                               </div>
                             </div>
                           </div> 
                         </div>
                     </div>  
             </div>
+          </div>
         </div>
-    </div>
-    <!-- footer -->
-    <footer>
+        <div class = "food-content">
+          <!-- item -->
+            <div class = "food-item">
+              <div class = "food-text">
+                <h3>Some of the BEST DISHES to try in China</h3>
+                <p>The vast territory and profound history of China endow the country with not only various natural landscape and historical relics, but also abundant food culture. The Chinese food can be divided into Eight Cuisines including both sweet and sour flavors as well as hot and spicy tastes.</p>
+                  <div class = "food-content">
+                    <!-- item -->
+                      <div class="row">
+                        <div class="column">
+                          <div class="card">
+                            <img src="images/dumpling.jpg" alt="">
+                              <div class="container">
+                                <h2>DUMPLING</h2>
+                                <p>Dumpling (饺子) has been an indispensable Chinese dish of the reunion dinner on Chinese New Year’s Eve, especially in the northern regions. It was invented by Zhang Zhongjing – the sage of Chinese medicine over 1,800 years ago to cure the frostbitten ears. Nowadays, people mix minced pork, chicken, mutton, or beef with chopped vegetables to make the filling, and then wrap it into a thin piece of dumpling skin and pinch the wrapper into the shape of an ear. On Chinese New Year, people also wrap brown sugar, coins, dates, or peanuts for a good omen.</p>
+                              </div>
+                          </div>
+                        </div>
+                        <div class="column">
+                          <div class="card">
+                            <img src="images/kung-pao-chicken.jpg" alt="">
+                            <div class="container">
+                              <h2>KUNG PAO CHICKEN</h2>
+                              <p>Kung Pao Chicken（宫保鸡丁）, definitely one of the top 10 Chinese dishes, is a popular dish not only among Chinese people. Its special flavor of sweet and sour with a little bit spicy is also well-liked abroad and this course even becomes the byword for Chinese cuisine for most foreigners. The main ingredient of Kung Pao Chicken is the diced chicken. Stir-frying the chicken with peanuts and dried chili can make it tastes fresh and crispy, spicy but not burning.</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="column">
+                        <div class="card">
+                          <img src="images/sweet-sour-pork.jpg" alt="">
+                          <div class="container">
+                            <h2>SWEET AND SOUR PORK FILLET</h2>
+                            <p>Kung Pao Chicken（宫保鸡丁）, definitely one of the top 10 Chinese dishes, is a popular dish not only among Chinese people. Its special flavor of sweet and sour with a little bit spicy is also well-liked abroad and this course even becomes the byword for Chinese cuisine for most foreigners. The main ingredient of Kung Pao Chicken is the diced chicken. Stir-frying the chicken with peanuts and dried chili can make it tastes fresh and crispy, spicy but not burning.</p>
+                          </div> 
+                        </div>
+                      </div>
+                      <div class="column">
+                        <div class="card">
+                          <img src="images/tofu.jpg" alt="">
+                          <div class="container">
+                            <h2>MA PO TOFU</h2>
+                            <p>Ma Po Tofu （麻婆豆腐）is a famous Chinese dish of the Sichuan cuisine and its hot and spicy taste best presents the feature of this category. It is said that this course was invented by a woman called Chen Mapo in 1862, and hence the name. To enrich the flavor, red and hot broth, ground beef and diced green onion will be drizzled over the tender tofu in the last step.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+          </div>
+      </div>
+      
+      <!-- footer -->
+      <footer>
         <div class = "social-links">
             <a href = "https://www.facebook.com/lykamarie.malonzo/"><i class = "fab fa-facebook-f"></i></a>
             <a href = "https://twitter.com/LykaMalonzo"><i class = "fab fa-twitter"></i></a>
@@ -82,8 +137,8 @@
             <a href = "https://www.pinterest.ph/lykamariemalonzo/"><i class = "fab fa-pinterest"></i></a>
         </div>
         <span>Food is Life Blog Page</span>
-    </footer>
-    <!-- end of footer -->
-   
+      </footer>
+      <!-- end of footer -->
+
     </body>
 </html>
