--- a/malonzo-lm-FoodBlog/about.html
+++ b/malonzo-lm-FoodBlog/about.html
@@ -30,16 +30,29 @@
         <div class="column">
           <div class="card">
             <img src="images/me.jpg" alt="" style="width:100%">
-            <div class="container">
-              <h2>Lyka Malonzo</h2>
-              <p class="title">Blog Creator</p>
-              <p>A fourth year college student taking up Computer Engineering.</p>
-              <p>This blog is a project for the following course subjects: Embedded, Comparcorg, and ComparcorgL.</p>
-              <p><button class="button"><a href="https://www.facebook.com/lykamarie.malonzo/">Contact</a></button></p>
-            </div>
           </div>
         </div>
-      
+        <div class="column">
+          <div class="about-container">
+            <h2>Lyka Malonzo</h2>
+            <p class="title">Blog Creator</p>
+            <p>A fourth year college student taking up Computer Engineering.</p>
+            <p>This blog is a project for the following course subjects: Embedded, Comparcorg, and ComparcorgL.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- footer -->
+      <footer>
+        <div class = "social-links">
+          <a href = "https://www.facebook.com/lykamarie.malonzo/"><i class = "fab fa-facebook-f"></i></a>
+          <a href = "https://twitter.com/LykaMalonzo"><i class = "fab fa-twitter"></i></a>
+          <a href = "https://www.instagram.com/malonzo.lyka/"><i class = "fab fa-instagram"></i></a>
+          <a href = "https://www.pinterest.ph/lykamariemalonzo/"><i class = "fab fa-pinterest"></i></a>
+        </div>
+      <span>Food is Life Blog Page</span>
+      </footer>
+  <!-- end of footer -->
    
     </body>
 </html>
