--- a/malonzo-lm/food-blog/about.html
+++ b/malonzo-lm/food-blog/about.html
@@ -49,6 +49,7 @@
           <a href = "https://twitter.com/LykaMalonzo"><i class = "fab fa-twitter"></i></a>
           <a href = "https://www.instagram.com/malonzo.lyka/"><i class = "fab fa-instagram"></i></a>
           <a href = "https://www.pinterest.ph/lykamariemalonzo/"><i class = "fab fa-pinterest"></i></a>
+          <a href="#"><i class = "fas fa-arrow-up"></i></a>
         </div>
       <span>Food is Life Blog Page</span>
       </footer>
