--- a/de-leon-j-blog/src/about.html
+++ b/de-leon-j-blog/src/about.html
@@ -27,7 +27,7 @@
                 <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
                 <h1 class="font-weight-bold">Nyarf</h1>
                 <p class="mb-4">
-                    I am Johnniel De Leon. For more concerns please contact me on the links below.
+                    Hello! I am Johnniel De Leon. For more concerns please contact me on the links below.
                 </p>
                 <div class="d-flex justify-content-center mb-5">
                     <a class="btn btn-outline-primary mr-2" href="https://twitter.com/jnyldl"><i class="fab fa-twitter"></i></a>
