--- a/Clothing Website/src/shop.html
+++ b/Clothing Website/src/shop.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clothing Website</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-
     <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
     <section id="header">
         <i class="fas fa-tshirt">TRENDS</i>
 
         <div>
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a  href="index.html">Home</a></li>
+                <li><a class="active" href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -25,45 +26,14 @@
         </div>
     </section>
 
-    <section id="homepg">
-        <h4>EXPLORE YOUR TRUE STYLE.</h4>
-        <h2>New Season</h2>
-        <h1>New Styles</h1> 
-        <p>Refresh your style with on-trend pieces</p>
-        <p>from our clothing collection.</p>
-        <button>Shop Now</button>
-    </section>
+    <section id="headerpg">
 
-    <section id="feature" class="section-p1">
-        <div class="f-box">
-            <img src="img/features/f1.png" alt="">
-            <h6>Free Shipping</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f2.png" alt="">
-            <h6>Online Order</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f3.png" alt="">
-            <h6>Save Money</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f4.png" alt="">
-            <h6>Promotions</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f5.png" alt="">
-            <h6>Happy Sell</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f6.png" alt="">
-            <h6>Customer Service</h6>
-        </div>
-
+        <h2>Our Products</h2>
+      
+        <p>Here you can check out our new products on Trends</p>
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>Featured Products</h2>
         <p>New Modern Design</p>
         <div class="pro-Container">
             <div class="pro">
@@ -194,9 +164,145 @@
                 </div>
                 <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
+            <div class="pro">
+                <img src="img/products/s8.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro">
+                <img src="img/products/s9.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro">
+                <img src="img/products/s10.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro">
+                <img src="img/products/s11.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro">
+                <img src="img/products/s12.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro">
+                <img src="img/products/s13.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro">
+                <img src="img/products/s16.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro">
+                <img src="img/products/s15.jpg" alt="">
+                <div class="des">
+                    <span>TRENDS</span>
+                    <h5>Modern Shirts</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>P499</h4>
+                </div>
+                <a href="cart.html"><i class="fal fa-shopping-cart cart"></i></a>
+            </div>
         </div>
+    </section>
+
+    <section id="pagination" class="section-p1">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
     </section>
 
     <script src="script.js"></script>
 </body>
+
+
 </html>
