Update: Add Functions

--- a/ardales-c-PixelArtGallery/index.html
+++ b/ardales-c-PixelArtGallery/index.html
@@ -276,6 +276,12 @@
                 </ul>
             </article>
         </div>
+        <div class="footer__copyright">
+            <small>Copyright &copy; Clint Ardales</small>
+        </div>
     </footer>
+
+<script src="./main.js"></script>
+
 </body>
 </html>
